--- a/win_createsite.yml
+++ b/win_createsite.yml
@@ -5,7 +5,7 @@
   tasks:
 
     - name: example play to run on a Windows server
-      hosts: windows
+      hosts: all
   tasks:
     - name: create a folder to store IIS site
       win_file:
