--- a/baseline_RHEL.yml
+++ b/baseline_RHEL.yml
@@ -1,15 +1,12 @@
----
 - hosts: all
-become: true
-
-tasks:
-- name: Install baseline packages
-  yum:
-    name: "{{ packages }}"
-  vars:
-    packages:
-    - httpd
-    -httpd-tools
-    -nginx
-    -unzip
-...
+  become: True
+  tasks:
+   - name: Install all the packages
+     dnf:
+       name: '{{ item }}'
+       state: present
+       update_cache: True
+     with_items:
+     httpd
+     php
+     vsftpd
