--- a/baseline_RHEL.yml
+++ b/baseline_RHEL.yml
@@ -1,26 +1,10 @@
 ---
-- name: CentOS Playbook
-  hosts: all
-  become: true
-  vars:
-   packages:
-   - unzip
-   - httpd
-   - nginx
-   - php-fpm
+- hosts: all
   tasks:
-   - name: Update yum package
-     yum:
-       name: "*"
-       state: latest
-       update_cache: yes
-   - name: Install Packages
-     yum:
-       name: "{{ packages }}"
-       state: latest
-       update_cache: yes
-   - name: Apache Service Start
-     service:
-       name: nginx
-       state: restarted
-       enabled: yes
+  - name: Package installation
+    yum:
+      name:
+        - sysstat
+        - httpd
+        - mariadb-server
+      state: latest
