--- a/win_install7zip.yml
+++ b/win_install7zip.yml
@@ -3,6 +3,6 @@
   gather_facts: false
   tasks:
     - name: Install 7zip choco
-      win_chocolatey:
+      chocolatey.chocolatey.win_chocolatey:
         name: 7zip
         state: present
