--- a/win_install7zip.yml
+++ b/win_install7zip.yml
@@ -6,3 +6,6 @@
       chocolatey.chocolatey.win_chocolatey:
         name: 7zip
         state: present
+        pinned: yes
+        architecture: x86
+        force: yes
