--- a/win_create_user.yml
+++ b/win_create_user.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Add User
       win_user:
-        name: ansible
+        name: jesus
         password: "enablement"
         state: present
 ...
