--- a/win_install7zip.yml
+++ b/win_install7zip.yml
@@ -3,7 +3,6 @@
   gather_facts: false
   tasks:
     - name: Uninstall 7zip without specifying the path
-      win_package:
+      chocolatey.chocolatey.win_chocolatey:
         product_id: 7-Zip
-        arguments: /S
-        state: absent
+        state: present
