--- a/cockpit.yml
+++ b/cockpit.yml
@@ -7,6 +7,10 @@
     yum:
       name: cockpit
       state: present
+  - name: install firewalld
+    yum:
+      name: firewalld
+      state: present
   - name: configuracion cockpit
     firewalld:
       port: 9090/tcp
