--- a/apache_rhel.yml
+++ b/apache_rhel.yml
@@ -11,6 +11,10 @@
     service:
       name: httpd 
       state: started
+  - name: install firewalld
+    yum:
+      name: firewalld
+      state: present
   - name: Open port 80 for http access
     firewalld:
       service: http
